# brainfuck

./: .clang-format  CMakeLists.txt  Makefile  README.md
examples/: hello_world.bf
src/: brainfuck.cpp  brainfuck.hpp  main.cpp
